--- a/semana14/node-e-package.json/package.json
+++ b/semana14/node-e-package.json/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "aula-back-arquitetura",
+  "name": "aula-node-package",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node ./src/index.ts",
-    "build": "tsc && node ./build/index.js"
+    "start": "tsc && node ./build/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Artur Candelori",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^13.7.7",
-    "ts-node": "^8.6.2",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.8.3"
+    "@types/node": "^14.0.13",
+    "typescript": "^3.9.5"
   }
 }
